@@ -655,6 +655,11 @@
       <range>LOS</range>
       <duration>Sustained</duration>
       <karma>9</karma>
+      <required>
+        <oneof>
+          <quality>Infected: Dzoo-Noo-Qua</quality>
+        </oneof>
+      </required>
       <source>SG</source>
       <page>194</page>
     </power>
@@ -3602,6 +3607,24 @@
       <page>160</page>
     </power>
     <power>
+      <id>4FEE3C62-36E4-41C5-AD87-28256AE53CFC</id>
+      <name>Immunity (Cold)</name>
+      <category>Paranormal/Infected</category>
+      <type>P</type>
+      <action>Auto</action>
+      <range>Self</range>
+      <duration>Always</duration>
+      <required>
+        <oneof>
+          <quality>Infected: Harvester</quality>
+          <quality>Infected: Wendigo</quality>
+        </oneof>
+      </required>
+      <karma>6</karma>
+      <source>DTR</source>
+      <page>160</page>
+    </power>
+    <power>
       <id>53a990fc-ed69-44eb-98d5-5363bf9139f7</id>
       <name>Metahuman Masque</name>
       <category>Paranormal/Infected</category>
@@ -3617,6 +3640,18 @@
       <karma>12</karma>
       <source>DTR</source>
       <page>160</page>
+    </power>
+    <power>
+      <id>67B58736-8BD3-4C88-9310-5051C8683966</id>
+      <name>Mimicry</name>
+      <category>Paranormal/Infected</category>
+      <type>P</type>
+      <action>Simple</action>
+      <range>LOS</range>
+      <duration>Sustained</duration>
+      <karma>9</karma>
+      <source>SR5</source>
+      <page>398</page>
     </power>
     <power>
       <id>09fb492d-0aa0-4a2e-8542-53e2cf97f432</id>
@@ -3671,6 +3706,23 @@
       <page>161</page>
     </power>
     <power>
+      <id>CE10BCD4-EDEE-42F4-A5EE-06647D7A8492</id>
+      <name>Pounce (Infected)</name>
+      <category>Mundane/Infected</category>
+      <type>P</type>
+      <action>Complex</action>
+      <range>Touch</range>
+      <duration>Instant</duration>
+      <required>
+        <oneof>
+          <quality>Infected: Bandersnatch</quality>
+        </oneof>
+      </required>
+      <karma>9</karma>
+      <source>HS</source>
+      <page>193</page>
+    </power>
+    <power>
       <id>f61e6df3-bd1a-4ce8-9c75-b49df275cfb3</id>
       <name>Predator's Glamour</name>
       <category>Paranormal/Infected</category>
@@ -3686,6 +3738,18 @@
       <karma>9</karma>
       <source>DTR</source>
       <page>161</page>
+    </power>
+    <power>
+      <id>3714CACF-7D91-4E38-8898-365A53E98108</id>
+      <name>Psychokinesis (Infected)</name>
+      <category>Paranormal</category>
+      <type>P</type>
+      <action>Complex</action>
+      <range>LOS</range>
+      <duration>Sustained</duration>
+      <karma>9</karma>
+      <source>SR5</source>
+      <page>400</page>
     </power>
     <power>
       <id>80d692d9-6f13-4148-b346-bb8fc7b78d34</id>
@@ -3720,6 +3784,76 @@
       <karma>6</karma>
       <source>DTR</source>
       <page>162</page>
+    </power>
+    <power>
+      <id>CA353685-D829-49F4-9023-1551398C31F6</id>
+      <name>Secretion/Substance Extrusion (Anti-Coagulant)</name>
+      <category>Mundane</category>
+      <type>P</type>
+      <action>Auto</action>
+      <range>Self</range>
+      <duration>Always</duration>
+      <bonus />
+      <karma>9</karma>
+      <required>
+        <oneof>
+          <quality>Infected: Vampire (Human)</quality>
+          <quality>Infected: Vampire (Non-Human)</quality>
+        </oneof>
+      </required>
+      <source>HS</source>
+      <page>193</page>
+    </power>
+    <power>
+      <id>CBE25F51-67D5-49EF-BC48-13CB376E6E39</id>
+      <name>Silence</name>
+      <category>Paranormal/Infected</category>
+      <type>P</type>
+      <action>Complex</action>
+      <range>Special</range>
+      <duration>Sustained</duration>
+      <karma>9</karma>
+      <required>
+        <oneof>
+          <quality>Infected: Banshee</quality>
+        </oneof>
+      </required>
+      <source>SG</source>
+      <page>199</page>
+    </power>
+    <power>
+      <id>F713F6DD-C932-405A-9EA3-A410A1516A92</id>
+      <name>Tunneling Claws</name>
+      <category>Paranormal/Infected</category>
+      <type />
+      <action />
+      <range />
+      <duration />
+      <bonus>
+        <naturalweapon>
+          <name>Tunneling Claws</name>
+          <reach>0</reach>
+          <damage>({STR}+1)P</damage>
+          <ap>-1</ap>
+          <useskill>Unarmed Combat</useskill>
+          <accuracy>Physical</accuracy>
+          <source>DTR</source>
+          <page>163</page>
+        </naturalweapon>
+      </bonus>
+      <karma>6</karma>
+      <required>
+        <oneof>
+          <quality>Infected: Ghoul (Dwarf)</quality>
+          <quality>Infected: Ghoul (Elf)</quality>
+          <quality>Infected: Ghoul (Human)</quality>
+          <quality>Infected: Ghoul (Ork)</quality>
+          <quality>Infected: Ghoul (Sasquatch)</quality>
+          <quality>Infected: Ghoul (Troll)</quality>
+        </oneof>
+      </required>
+      <source>HS</source>
+      <page>172</page>
     </power>
     <power>
       <id>96ce4db8-74c5-47ea-8305-1096858ba8ee</id>
